--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 
   <body>
     <div class="header">
-      <img src="*" alt="alt-text"> 
-      <ul>
-        <li><a href="*">header link one</a></li>
-        <li><a href="*">header link two</a></li>
-        <li><a href="*">header link three</a></li>
-      </ul>
-      <h1>This website is awesome</h1> 
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <div class="button">
-            <button>Sign Up</button>
-        <img src="*" alt="alt-text">
+        <div class="nav">
+            <div class=logo><a href="index.html"><img src="*" alt="Header-Logo"></a></div>
+            <ul>
+                <li><a href="*">header link one</a></li>
+                <li><a href="*">header link two</a></li>
+                <li><a href="*">header link three</a></li>
+            </ul>
+        </div>
+        <div class="top">
+            <h1>This website is awesome</h1> 
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <div class="button">
+                    <button>Sign Up</button>
+                </div>
+                <img src="*" alt="alt-text"> 
         </div>
     </div>
 
@@ -48,7 +52,6 @@
         <div class="footer">
             <a href="index.html">Copyright © The Odin Project 2022</a>
         </div>
-
     </div>
   </body>
 </html>
