Rewrote html to exclude unneeded divs and classes. Write CSS for navbar, hero, content, and quote sections.

--- a/index.html
+++ b/index.html
@@ -9,49 +9,65 @@
   </head>
 
   <body>
-    <div class="header">
-        <div class="nav">
-            <div class=logo><a href="index.html"><img src="*" alt="Header-Logo"></a></div>
-            <ul>
-                <li><a href="*">header link one</a></li>
-                <li><a href="*">header link two</a></li>
-                <li><a href="*">header link three</a></li>
-            </ul>
-        </div>
-        <div class="top">
-            <h1>This website is awesome</h1> 
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <div class="button">
-                    <button>Sign Up</button>
+        <div class="container">
+
+            <div class="navbar">
+                <div class=logo><a href="index.html"><img src="images/logo.jpg"></a></div>
+                <ul>
+                    <li><a href="*">Header link one</a></li>
+                    <li><a href="*">Header link two</a></li>
+                    <li><a href="*">Header link three</a></li>
+                </ul>
+            </div>
+                
+            <div class="hero">
+                <div class="left">
+                    <h1 class="heading">This website is awesome</h1> 
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <div class="button"><button>Sign Up</button></div>
                 </div>
-                <img src="*" alt="alt-text"> 
-        </div>
-    </div>
+                <div class="hero-image">
+                    <img src="images/earth.jpg" alt="Earth">
+                </div> 
+            </div>
 
-    <div class="main">
-        <div class="info">
-            <h2>Some random information.</h2>
-              <div class="card"><img src="*" alt="image">Random text</div>
-              <div class="card"><img src="*" alt="image">Random text</div>
-              <div class="card"><img src="*" alt="image">Random text</div>
-              <div class="card"><img src="*" alt="image">Random text</div>
-        </div>
+            <div class="content">
+                <h2>So many planets in our solar system!</h2>
+                <div class="cards">
+                    <div>
+                        <img src="images/saturn.jpg" alt="image">
+                        <p>Saturn is known for it's many rings!</p>
+                    </div>
+                    <div>
+                        <img src="images/jupiter.jpg" alt="image">
+                        <p>Jupiter is the largest planet in our solar system!</p>
+                    </div>
+                    <div>
+                        <img src="images/uranus.jpg" alt="image">
+                        <p>The most joked about planet!</p>
+                    </div>
+                    <div>
+                        <img src="images/pluto.jpg" alt="image">
+                        <p>Is it a planet or a cartoon dog? Experts still disagree!</p>
+                    </div>
+                </div>
+            </div>
 
-        <div class="testimonial" class="quote">This is an inspiring quote, or a testimonial from a customer. MAybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-          <div class="author">-Thor, God of Thunder</div>
-        </div>
+            <div class="quote">
+                <h2>"When you look at the stars and the galaxy, you feel that you are not just from any particular piece of land, but from the solar system."</h2>
+                <p>-Kalpana Chawla</p>
+            </div>
 
-        <div class="action">
-            <h3>Call to action! It's Time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <div class="button">
-                <button>Sign up</button>
+            <div class="action">
+                <h3>Call to action! It's Time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+                <div class="button"><button>Sign up</button></div>
+            </div>
+
+            <div class="footer">
+                <a href="index.html">Copyright © The Odin Project 2022</a>
             </div>
         </div>
-
-        <div class="footer">
-            <a href="index.html">Copyright © The Odin Project 2022</a>
-        </div>
-    </div>
   </body>
+
 </html>
