--- a/index.html
+++ b/index.html
@@ -6,51 +6,60 @@
     <meta charset="utf-8">
     <title>Awesome</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
   </head>
 
   <body>
-        <div class="container">
 
-            <div class="navbar">
-                <div class=logo><a href="index.html"><img src="images/logo.jpg"></a></div>
-                <ul>
-                    <li><a href="*">Header link one</a></li>
-                    <li><a href="*">Header link two</a></li>
-                    <li><a href="*">Header link three</a></li>
-                </ul>
-            </div>
-                
-            <div class="hero">
-                <div class="left">
-                    <h1 class="heading">This website is awesome</h1> 
+    <nav class="navbar">
+        <a href="index.html"><img class="logo" src="images/logo.jpg" alt="logo"></a>
+        <ul class="nav-links">
+            <li><a href="*">Header link one</a></li>
+            <li><a href="*">Header link two</a></li>
+            <li><a href="*">Header link three</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+
+         <div class="header">
+            <div class="media-box">
+                <div class="text-box">
+                    <h1>This website is awesome</h1> 
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                    <div class="button"><button>Sign Up</button></div>
+                    <button class="button">Sign Up</button>  
                 </div>
-                <div class="hero-image">
-                    <img src="images/earth.jpg" alt="Earth">
-                </div> 
+                <img class="header-image" src="images/earth.jpg" alt="Earth">
             </div>
+        </div>
 
             <div class="content">
                 <h2>So many planets in our solar system!</h2>
+
                 <div class="cards">
-                    <div>
-                        <img src="images/saturn.jpg" alt="image">
+                    <div class="planet-card">
+                        <img class="planet-image" src="images/saturn.jpg" alt="image">
                         <p>Saturn is known for it's many rings!</p>
                     </div>
-                    <div>
-                        <img src="images/jupiter.jpg" alt="image">
+                    
+                    <div class="planet-card">
+                        <img class="planet-image" src="images/jupiter.jpg" alt="image">
                         <p>Jupiter is the largest planet in our solar system!</p>
                     </div>
-                    <div>
-                        <img src="images/uranus.jpg" alt="image">
+
+                    <div class="planet-card">
+                        <img class="planet-image" src="images/uranus.jpg" alt="image">
                         <p>The most joked about planet!</p>
                     </div>
-                    <div>
-                        <img src="images/pluto.jpg" alt="image">
+
+                    <div class="planet-card">
+                        <img class="planet-image" src="images/pluto.jpg" alt="image">
                         <p>Is it a planet or a cartoon dog? Experts still disagree!</p>
                     </div>
                 </div>
+
             </div>
 
             <div class="quote">
@@ -59,15 +68,22 @@
             </div>
 
             <div class="action">
-                <h3>Call to action! It's Time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <div class="button"><button>Sign up</button></div>
+                <div class="action-box">
+                    <div class="action-words">
+                        <h3>Call to action! It's Time!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <div>
+                        <button class="button">Sign up</button>
+                    </div>
+                </div>
             </div>
 
-            <div class="footer">
+            <footer class="footer">
                 <a href="index.html">Copyright © The Odin Project 2022</a>
-            </div>
+            </footer>
         </div>
+
   </body>
 
 </html>
